infra/crowdsec/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-lapi
  namespace: kube-system
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - crowdsec.int.vanwyhe.xyz
  rules:
    - backendRefs:
        - name: crowdsec-service
          namespace: security
          port: 8080
